--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,9 @@ services:
       - "5000:5000"
     environment:
       - FLASK_APP=app.py
+      - REDIS_HOST=redis
+      - REDIS_PORT=6379
+      - MONGO_URI=mongodb://mongo:27017/
     depends_on:
       - redis
       - mongo
