fix: Install curl for API service container
Make sure curl is installed for ping health check in API docker
container

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -6,6 +6,8 @@ COPY app.py requirements.txt ./
 
 RUN pip install -r requirements.txt
 
+RUN apk add curl
+
 EXPOSE 5000
 
 CMD ["flask", "run", "--host=0.0.0.0"]
