feat: Add readiness probe to API deployment pods
For flaskapi pods, add a readiness probe to ensure traffic is not sent
to pods that are alive but not ready

--- a/k8s/api-deployment.yml
+++ b/k8s/api-deployment.yml
@@ -30,3 +30,9 @@ spec:
               port: 5000
             initialDelaySeconds: 5
             periodSeconds: 30
+          readinessProbe:
+            httpGet:
+              path: /
+              port: 5000
+            initialDelaySeconds: 5
+            periodSeconds: 30
