feat: Add resource limits for Kubernetes pods to prevent resource hogging
- Specify a minimum resource allocation of CPU and memory that pods are guaranteed to have
	- Leave a higher allocation for higher performance pods (MongoDB)
- Specify a limit or cap to how many resources a pod can use (not guaranteed to be available)
- Pods that exceed their resource limit will be throttled

--- a/k8s/api-deployment.yml
+++ b/k8s/api-deployment.yml
@@ -24,6 +24,13 @@ spec:
               value: "6379"
             - name: MONGO_URI
               value: "mongodb://mongo:27017/"
+          resources:
+            requests:
+              memory: "128Mi"
+              cpu: "100m"
+            limits:
+              memory: "256Mi"
+              cpu: "500m"
           livenessProbe:
             httpGet:
               path: /
