--- a/k8s/mongo-deployment.yml
+++ b/k8s/mongo-deployment.yml
@@ -20,6 +20,13 @@ spec:
           volumeMounts:
             - name: mongo-storage
               mountPath: /data/db
+          resources:
+            requests:
+              memory: "512Mi"
+              cpu: "250m"
+            limits:
+              memory: "2Gi"
+              cpu: "1000m"
           livenessProbe:
             exec:
               command:
