--- a/k8s/redis-deployment.yml
+++ b/k8s/redis-deployment.yml
@@ -17,6 +17,13 @@ spec:
           image: redis:8.0-alpine
           ports:
             - containerPort: 6379
+          resources:
+            requests:
+              memory: "128Mi"
+              cpu: "50m"
+            limits:
+              memory: "512Mi"
+              cpu: "250m"
           livenessProbe:
             exec:
               command:
