--- a/.gitignore
+++ b/.gitignore
@@ -67,10 +67,11 @@ docker-compose.override.yml
 .terraform/
 terraform.tfstate
 terraform.tfstate.*
+.terraform.lock.hcl
+.terraform.tfstate.lock.info
 crash.log
 *.tfvars
 override.tf
 override.tf.json
 *_override.tf
 *_override.tf.json
-.terraform.lock.hcl
