feat: Change K8s API service to type LoadBalancer
For the API, use service type LoadBalancer for public access of the API from the EKS cluster

--- a/k8s/api-service.yml
+++ b/k8s/api-service.yml
@@ -3,10 +3,9 @@ kind: Service
 metadata:
   name: flaskapi
 spec:
-  type: NodePort
+  type: LoadBalancer
   selector:
     app: flaskapi
   ports:
     - port: 5000
       targetPort: 5000
-      nodePort: 30000
